# backend

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: main.py
app/api/routes/: ellipticCurve.py  prime.py
app/core/: generators.py  main.py  primality.py  utils.py
app/core/cryptoSystem/: affine.py  ecc.py  elgamal.py  rsa.py  shiftcipher.py  vigenere.py
app/core/ellipticCurve/: Koblitz.py  curve.py  domain.py  ellipticCurve.py  point.py  registry.py
app/core/prime/: aks.py  generator.py  millerRabin.py  primality.py  smallPrimes.py
app/core/signatureScheme/: ecdsa.py  elgamal.py  rsa.py
app/cryptoSystem/classic/: Shift.py
app/cryptoSystem/modern/: ElGamal.py  RSA.py
app/ellipticCurve/: ellipticCurve.py  sandbox.sage
app/schemas/: crypto_schemas.py  ecc.py  ecdsa.py  ecdsa_schemas.py  elgamal.py  rsa.py
tests/: conftest.py
tests/api/: test_api_prime.py  test_prime.py
tests/api/crytoSystem/: test_api_cryptosystem_rsa.py  test_cryptosystem_elgamal.py  test_cryptosystem_rsa.py  test_ecc.py
tests/api/prime/: test_prime.py
tests/api/signatureScheme/: test_api_signaturescheme_ecdsa.py  test_api_signaturescheme_elgamal.py  test_api_signaturescheme_rsa.py  test_signaturescheme_ecdsa.py  test_signaturescheme_elgamal.py  test_signaturescheme_rsa.py
tests/core/: test_koblitz.py
tests/core/cryptoSystem/: test_core_cryptoSystem_affine.py  test_core_cryptoSystem_ecc.py  test_core_cryptoSystem_elgamal.py  test_core_cryptoSystem_rsa.py  test_core_cryptoSystem_vigenere.py  test_cryptoSystem_shiftcipher.py
tests/core/prime/: test_aks.py  (+1 more)
(+42 files in other folders)
