[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["png261 <nhphuong.code@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
