[tool.poetry]
name = "cryptotool-backend"
version = "0.1.0"
description = ""
authors = ["png261 <nhphuong.code@gmail.com>"]
readme = "README.md"
packages = [
    {include = "app"}
]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.0"
requests = "^2.32.3"
fastapi = "^0.115.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
